@@ -1256,11 +1256,13 @@ int main(int argc, char *argv[])
 #if defined(WIN32) && defined(KPATHSEA)
    int ac;
    char **av, *enc;
-   kpse_set_program_name(argv[0], "dvidvi");
-   enc = kpse_var_value("command_line_encoding");
-   if (get_command_line_args_utf8(enc, &ac, &av)) {
-      argc = ac;
-      argv = av;
+   if (argc>1) {
+      kpse_set_program_name(argv[0], "dvidvi");
+      enc = kpse_var_value("command_line_encoding");
+      if (get_command_line_args_utf8(enc, &ac, &av)) {
+         argc = ac;
+         argv = av;
+      }
    }
 #endif
    processargs(argc, argv) ;
